--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,5 @@
-# Spring DataSource & JPA Configurations
-spring.datasource.url=jdbc:postgresql://sigfarm-ps-farm.d.aivencloud.com:15268/sigfarm?sslmode=require
+spring.application.name=SIGFARM_BACKEND
+server.port=8080
+spring.datasource.url=jdbc:postgresql://sigfarm-ps-farm.d.aivencloud.com:15268/sigfarm
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_qs94gQV4Isu6BhL_ATL
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Hibernate Properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-# Hibernate SSL Properties
-spring.datasource.tomcat.test-on-borrow=true
-spring.datasource.tomcat.validation-query=SELECT 1
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
